[[bench]]
harness = false
name = "bench"
path = "benches/bench.rs"

[dependencies]
log = { optional = true, version = "0.4" }
serde = { features = ["derive"], optional = true, version = "1" }
unicode-id = { features = ["no_std"], version = "0.3" }

[dev-dependencies]
criterion = "0.5"
env_logger = "0.11"
pretty_assertions = { workspace = true }
serde_json = { version = "1" }
swc_core = { version = "33", features = [
  "common",
  "ecma_ast",
  "ecma_parser",
  "ecma_visit",
] }

[features]
default = []
json = ["serde"]
log = ["dep:log"]
serde = ["dep:serde"]

[package]
authors = ["Master Woodie <tabletzuhausebeiuns@gmail.com>"]
edition = "2018"
homepage = "https://github.com/WoodieMaster/woodmarkdown-rs.git"
include = ["src/", "license"]
license = "MIT"
name = "woodmarkdown"
repository = "https://github.com/WoodieMaster/woodmarkdown-rs.git"
rust-version = "1.56"
version = "1.0.0"

[workspace]
members = ["generate", "mdast_util_to_markdown"]

[workspace.dependencies]
pretty_assertions = "1"
